# Openpi-AIPRO-VLA

./: README.md  code.md
ros2_ws/src/aloha_rx64_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/aloha_rx64_bridge/aloha_rx64_bridge/: __init__.py  rx64_driver.py  rx64_node.py  rx64_ping.py
ros2_ws/src/aloha_rx64_bridge/launch/: rx64_single.launch.py
ros2_ws/src/aloha_rx64_bridge/resource/: aloha_rx64_bridge
scripts/: rx64_limit_test.py  rx64_manual_control.py  rx64_ros2_node.py
