<?xml version="1.0"?>
<package format="3">
  <name>aloha_rx64_bridge</name>
  <version>0.1.0</version>
  <description>Minimal ROS2 bridge for controlling a Dynamixel RX-64 over RS485 on Orange Pi AI Pro.</description>

  <maintainer email="user@example.com">Openpi User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
